# alice-hlt-crorc-utils

./: CMakeLists.txt  README.md
CMake/: Findlibrorc.cmake
scripts/: CMakeLists.txt  crorc_hwcf_coproc_zmq_feeder.py  crorc_rescan_pcie  crorc_start_dma_out.sh  crorc_start_pgreadout.sh  crorc_stop_dma_out.sh
src/: CMakeLists.txt  class_crorc.cpp  class_crorc.hpp  crorc_ddr3ctrl.cpp  crorc_dma_benchmark.cpp  crorc_dma_in.cpp  crorc_dma_in_pgsweep.cpp  crorc_dma_out.cpp  crorc_dma_out.h  crorc_dma_out_pgsweep.cpp  crorc_event_counts.cpp  crorc_fcf_mapping_dump.cpp  crorc_flash.cpp  crorc_fpga_ctrl.cpp  crorc_free_buffers.cpp  crorc_hwcf_coproc_handler.cpp  crorc_hwcf_coproc_handler.hpp  crorc_hwcf_coproc_zmq.cpp  crorc_i2c.cpp  crorc_push_file.cpp  crorc_qsfp_ctrl.cpp  crorc_reset.cpp  crorc_sensors.cpp  crorc_status_dump.cpp  event_checker.cpp  event_checker.hh  fcf_mapping.cpp  fcf_mapping.hh  file_writer.cpp  file_writer.hh
